--- a/sass/partials/_menu.scss
+++ b/sass/partials/_menu.scss
@@ -118,6 +118,7 @@
                 display: block;
                 padding: 0rem 1rem 4rem;
                 margin: -7rem 0 0 2rem;
+                position:absolute;
             }
         }
     }
