--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -341,9 +341,8 @@ article.tribe_events h3 {
     font-size: 1.6em;
 }
 
-.post-type-archive-news, .page-template-page-working-groups-php, .single-news, .tax-project-types, .tax-kind, .single-projects {
+.post-type-archive-news, .page-template-page-working-groups-php, .single-news, .tax-project-types, .tax-kind, .single-projects, .page-template-page-about-php {
     .site-content {
-        // background-color: pink;
         max-width: 76rem;
     }
 }
@@ -388,7 +387,10 @@ article.tribe_events h3 {
         background-color: white;
     }
 }
-
+.page-template-page-about-php .hentry .entry-content {
+    @extend %medium-type;
+     margin: 4rem 6rem ;
+}
 .events-archive .page-header h1 {
     font-size: 2.5em;
 }
