cleaning up author

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 /*
-Theme Name: Boxy
+Theme Name: English Channel
 Author: DLTS
-Description: This is a custom theme for NYU engish department. 
+Description: This is a custom theme for NYU English department. 
 Version: 1.2.3
 License: GNU General Public License
 License URI: license.txt
