--- a/ec_base_ie.css
+++ b/ec_base_ie.css
@@ -1,6 +1,6 @@
 /**
 * Theme Name: English Channel
-* Author: Laura M Henze
+* Author: DLTS
 */
 /* line 36, ../../../../../../Ruby/Gems/1.8/gems/toolkit-1.3.8/stylesheets/toolkit/_box-sizing.scss */
 *, *:after, *:before {
