--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -47,7 +47,7 @@
 
 // Individual working group page
 .tax-working-groups {
-    // if there is only a description, and no other content
+    // if there is only a description, and no other content available
     .js & #dynamic-grid .brick:only-of-type {
         color: red;
         width:auto;
