--- a/sass/partials/_content_home.scss
+++ b/sass/partials/_content_home.scss
@@ -18,6 +18,7 @@
         padding: 0;
         &.twitter-widget {
             float: right;
+            width: 320px;
         }
     }
     .entry-summary, .entry-summary p {
