--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -365,7 +365,7 @@ article.tribe_events h3 {
     .site-content {
         @extend %medium-type;
         width: 100%;
-        margin-bottom: 6em;
+        // margin-bottom: 6em;
     }
     .page-header h1 {
         font-size: 3em;
@@ -391,6 +391,10 @@ article.tribe_events h3 {
         @extend %small-type;
         padding: 2rem;
         background-color: white;
+        .wg_url {
+             @extend %medium-type;
+             padding: 3rem 0 1rem 0;
+        }
     }
 }
 .page-template-page-about-php .hentry .entry-content {
