fixing up display of events in search results

--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -467,7 +467,7 @@ article.tribe_events h3 {
         font-size: 17px;
         font-size: 1.7rem;
     }
-    .entry-content, .entry-summary, .entry-header {
+    .entry-content, .entry-summary, .entry-header, .tribe-events-event-meta {
         margin: 1rem 1rem .5em;
     }
 }
