--- a/tribe-events/tribe-events.css
+++ b/tribe-events/tribe-events.css
@@ -834,6 +834,11 @@ select.tribe-events-dropdown {
 }
 /* Meta Sections */
 .single-tribe_events .tribe-events-event-meta {
+	background: inherit;
+	border: none;
+	margin: 0px 0;
+}
+.single-tribe_events .meta-holder {
 	background: #fafafa;
 	border: 1px solid #eee;
 	margin: 0px 0;
@@ -873,8 +878,17 @@ select.tribe-events-dropdown {
 }
 
 /* Event Meta */
-.single-tribe_events .tribe-events-event-meta {
+.single-tribe_events .tribe-events-event-meta,
+dl.working-group {
 	font-size: 13px;
+	
+}
+dl.working-group dd {
+	font-size: 18px;
+	display: inline-block;
+	
+}
+.single-tribe_events .meta-holder{
 	padding-top: 30px;
 }
 .tribe-events-event-meta .tribe-events-meta-group, 
@@ -883,7 +897,7 @@ select.tribe-events-dropdown {
 	width: 33.3333%;
 	padding: 0;
 	text-align: left;
-	margin: 0 0 20px 0;
+	margin: 0 ;
 	display: inline-block;
 	zoom: 1;
 	*display: inline;
@@ -897,14 +911,16 @@ select.tribe-events-dropdown {
 	margin: 0;
 }
 
-.single-tribe_events #tribe-events-content .tribe-events-event-meta dt {
+.single-tribe_events #tribe-events-content .tribe-events-event-meta dt,
+.single-tribe_events  #tribe-events-content .meta-holder dt {
 	clear: left;
 	font-weight: bold;
 	line-height: 1;
 	list-style: none;
 }
 
-.single-tribe_events #tribe-events-content .tribe-events-event-meta dd {
+.single-tribe_events #tribe-events-content .tribe-events-event-meta dd,
+.single-tribe_events #tribe-events-content .meta-holder dd {
 	padding: 0;
 	margin: 0 0 10px 0;
 	line-height: 1.5;
@@ -916,13 +932,23 @@ select.tribe-events-dropdown {
 	display: block;
 }
 /* Content */
-.single-tribe_events .tribe-events-content,
+
 .single-tribe_events .tribe-events-event-meta  {
 	width: 100%;
 	max-width: 100%;
-	padding: 30px 40px 30px 40px;
+	padding: 30px 0px 0px 0px;
+	}
+.single-tribe_events .tribe-events-content{
+	width: 100%;
+	max-width: 100%;
+	padding: 40px 40px 20px 40px;
 }
-
+.single-tribe_events .meta-holder  {
+	width: 100%;
+	max-width: 100%;
+	padding: 0px 40px 60px 40px;
+	
+}
 
 .hentry.has-post-thumbnail .tribe-events-event-meta  {
 	/*padding: 30px 0;*/
