Adding Descriptive content type name to title

--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -406,7 +406,7 @@ article.tribe_events h3 {
             padding: 3rem 0 1rem 0;
         }
     }
-    .type-working-group header {
+    article header {
         h1 {
             .info {
                 text-transform: uppercase;
