--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -73,6 +73,7 @@
         padding-right: 1rem;
         @include respond-to("desktop") {
             display: inline-block;
+            font-size: 16px;
         }
     }
     .modal_underlay {
