--- a/tribe-events/tribe-events.css
+++ b/tribe-events/tribe-events.css
@@ -460,6 +460,9 @@ h2.tribe-events-page-title a:focus {
 .single-tribe_events #tribe-events-header {
 	margin: 1em 0 20px;
 }
+.single-tribe_events .comments-area#comments {
+	padding: 20px 40px;
+}
 .single-tribe_events #tribe-events-header li,
 .single-tribe_events #tribe-events-footer li {
 	width: 48%;
@@ -744,6 +747,11 @@ select.tribe-events-dropdown {
 	margin: 0;
 	padding: 0;
 }
+
+
+.page-header h1 {
+		color: #304B56;
+}
 #tribe-events-content .tribe-events-single-event-description  img.attachment-post-thumbnail {
 	margin-left: auto;
 	margin-right: auto;
@@ -941,7 +949,7 @@ dl.working-group dd {
 .single-tribe_events .tribe-events-content{
 	width: 100%;
 	max-width: 100%;
-	padding: 40px 40px 20px 40px;
+	/*padding: 40px 40px 20px 40px;*/
 }
 .single-tribe_events .meta-holder  {
 	width: 100%;
@@ -981,6 +989,7 @@ dl.working-group dd {
 	clear: both;
 	font-size: 12px;
 	border-collapse: collapse;
+	table-layout: auto;
 }
 #tribe-events-content table.tribe-events-calendar, 
 #tribe-events-content .tribe-events-calendar td {
@@ -1936,4 +1945,17 @@ only screen and (min-device-pixel-ratio: 2) {
 		padding-left: 222px;
 	}
 }
+/********/
 
+.events-archive header.entry-header, .events-archive footer.entry-meta, .single-tribe_events header.entry-header, .single-tribe_events footer.entry-meta, .single-tribe_venue header.entry-header, .single-tribe_venue footer.entry-meta, .single-tribe_organizer header.entry-header, .single-tribe_organizer footer.entry-meta {
+	display: block;
+	
+}
+.tribe_events.vevent {
+	background-color: white;
+	padding: 20px 40px;
+}
+.tribe_events.vevent .entry-title {
+	line-height: 1.3;
+	margin-bottom: 10px;
+}
