--- a/sass/editor-style.scss
+++ b/sass/editor-style.scss
@@ -1,5 +1,6 @@
 
 @import "compass";
+@import "partials/_settings";
 @import "partials/_defines";
 @import "partials/_reset";
 @import "partials/_helpers";
