--- a/sass/partials/_menu.scss
+++ b/sass/partials/_menu.scss
@@ -160,7 +160,7 @@
         .site-navigation {
             width: 33%;
             display: table-cell;
-            background: $blue-background url(images/csa.jpg) no-repeat left bottom;
+            background: $blue-background url(images/csa-tall.jpg) no-repeat left bottom;
             a.nav-toggle {
                 display: none;
             }
