--- a/ie.css
+++ b/ie.css
@@ -1,23 +1,1 @@
-/**
- * Styles for IE8.
- * IE7 and below not supported.
- *
- */
-/* Prevent stretching of full-size images with height and width attributes in IE8 */
-/* line 15, sass/ie.scss */
-.site-header img,
-.entry-content img,
-img.size-full {
-  width: auto;
-}
-
-/* Non Responsive Layout for IE 8 */
-/* line 66, sass/partials/_mixins.scss */
-#page, #primary {
-  width: 960px;
-}
-
-/* line 23, sass/ie.scss */
-.header-main, .widget-area, .page-header, .post-navigation, .paging-navigation {
-  border: 1px solid #ddd;
-}
+.site-header img,.entry-content img,img.size-full{width:auto}#page,#primary{width:960px}.header-main,.widget-area,.page-header,.post-navigation,.paging-navigation{border:1px solid #ddd}
