--- a/sass/print.scss
+++ b/sass/print.scss
@@ -5,6 +5,7 @@
 
 
 @import "compass";
+@import "partials/_settings";
 @import "partials/_defines";
 @import "partials/_reset";
 @import "partials/_helpers";
